--- a/client/messages2.html
+++ b/client/messages2.html
@@ -3,12 +3,12 @@
     {{#each messages}}
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-          <img src="{{image}}" alt="...">
+          <img src="{{image}}" alt="">
           <div class="caption">
             <h3>제목</h3>
             <p>{{message}}</p>
-            <p><a href="#" class="btn btn-primary" role="button" id="testButton">Test</a>
-              <a id="removeTwit" href="#" class="btn btn-danger" role="button">Button</a></p>
+            <p><a href="#" class="btn btn-primary" role="button" id="testButton">좋아요!</a>
+              <a id="removeTwit" href="#" class="btn btn-danger" role="button">삭제</a></p>
           </div>
         </div>
       </div>
