--- a/client/messages.html
+++ b/client/messages.html
@@ -1,12 +1,21 @@
 <template name="messages">
-  <table>
-    {{#each messages}}
-      <tr>
-        <td>{{email}}</td>
-        <td>{{message}}</td>
-        <td><img src="{{image}}" alt="" style="width: 100px;"></td>
-      </tr>
-    {{/each}}
+  <table class="table table-dark">
+    <thead>
+    <tr>
+      <td>이메일</td>
+      <td>메시지</td>
+      <td>이미지</td>
+    </tr>
+    </thead>
+    <tbody>
+      {{#each messages}}
+        <tr>
+          <td>{{user.emails.[0].address}}</td>
+          <td>{{message}}</td>
+          <td><img src="{{image}}" alt="" style="width: 100px;"></td>
+        </tr>
+      {{/each}}
+    </tbody>
   </table>
 
 </template>
